--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "preact-mobx",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simple observer decorator for using Preact components with MobX",
   "main": "dist/index.js",
+  "typings": "dist/index",
   "repository": "https://github.com/VuexLtd/preact-mobx",
   "author": "James Birtles <james.birtles@vuex.io>",
   "license": "MIT",
   "scripts": {
     "build": "tsc"
   },
-  "dependencies": {
+  "peerDependencies": {
     "mobx": "^3.0.0",
     "preact": "^8.0.0"
   },
