--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,7 @@
         "declaration": true,
         "outDir": "dist",
         "experimentalDecorators": true,
-        "lib": [
-            "dom",
-            "es2015",
-            "es2016.array.include"
-        ]
+        "skipLibCheck": true,
+        "lib": ["dom", "es2015", "es2016.array.include"]
     }
 }
