--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "preact-mobx",
-    "version": "0.1.3",
+    "version": "0.1.4",
     "description": "Simple observer decorator for using Preact components with MobX",
     "main": "dist/index.js",
     "typings": "dist/index",
@@ -16,8 +16,8 @@
         "preact": "^8.0.0"
     },
     "devDependencies": {
-        "typescript": "^2.2.2",
         "mobx": "^3.0.0",
-        "preact": "^8.0.0"
+        "preact": "^8.0.0",
+        "typescript": "^2.2.2"
     }
 }
